mysql-deployment-pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-gamesinfo
  clusterIP: None
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql-gamesinfo
spec:
  selector:
    matchLabels:
      app: mysql-gamesinfo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-gamesinfo
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim-gamesinfo
